# old_kriek

./: .gitignore  .travis.yml  LICENSE  Main.hs  README.md  kriek.cabal  slack-log.txt
doc/: 01-intro.md
examples/: analyser.kk  factorial.k  nothaskell.k  scanner.k
src/: Main.hs
src/hs/: Kriek.hs
src/hs/Kriek/: AST.hs  Ast.hs  Compiler.hs  Data.hs  Fs.hs  Ir.hs  Reader.hs  Repl.hs  Runtime.hs  Scanner.hs  Types.hs
src/hs/Kriek/Backend/: ES6.hs
src/hs/Kriek/Backend/ES6/: Analyser.hs  Ast.hs
src/hs/Kriek/Runtime/: Analyser.hs  Data.hs  Library.hs
src/k/kriek/: async.k
src/k/kriek/db/: chain.k
test/: ReaderSpec.hs  RuntimeTest.hs
